--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,55 @@
-absl-py==1.0.0
 aniso8601==9.0.1
-astunparse==1.6.3
-black==21.12b0
-cachetools==4.2.4
-certifi==2021.10.8
-cfgv==3.3.1
-charset-normalizer==2.0.10
+appdirs==1.4.4
+Brlapi==0.8.3
+btrfsutil==5.15.1
+CacheControl==0.12.6
+cffi==1.15.0
+chardet==4.0.0
 click==8.0.3
-cycler==0.11.0
+colorama==0.4.4
+contextlib2==0.6.0.post1
+cryptography==36.0.1
 distlib==0.3.4
-filelock==3.4.2
+distro==1.6.0
+dnspython==2.1.0
 Flask==2.0.2
 Flask-RESTful==0.3.9
-flatbuffers==2.0
-fonttools==4.28.5
-gast==0.5.3
-google-auth==2.3.3
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-grpcio==1.43.0
-h5py==3.6.0
-identify==2.4.2
+html5lib==1.1
 idna==3.3
+importlib-metadata==4.8.1
+isc==2.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
-keras==2.8.0rc0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.3.2
-libclang==12.0.0
+lensfun==0.3.95
+libfdt==1.6.1
+libtorrent===1.2.15-build-libtorrent-rasterbar-src-libtorrent-rasterbar-1.2.15-bindings-python
+louis==3.20.0
 Markdown==3.3.6
 MarkupSafe==2.0.1
-matplotlib==3.5.1
-mypy-extensions==0.4.3
-nodeenv==1.6.0
-numpy==1.22.0
-oauthlib==3.1.1
-opt-einsum==3.3.0
-packaging==21.3
-pandas==1.3.5
-pathspec==0.9.0
-Pillow==9.0.0
-platformdirs==2.4.1
-pre-commit==2.16.0
-protobuf==3.19.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==3.0.6
-python-dateutil==2.8.2
+more-itertools==8.10.0
+msgpack==1.0.3
+netsnmp-python==1.0a1
+ordered-set==4.0.2
+packaging==20.9
+pep517==0.12.0
+ply==3.11
+progress==1.6
+pwquality==1.4.4
+pycairo==1.20.1
+pycparser==2.21
+PyGObject==3.42.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
 pytz==2021.3
-PyYAML==6.0
-requests==2.27.1
-requests-oauthlib==1.3.0
-rsa==4.8
-scipy==1.7.3
-seaborn==0.11.2
+pyxdg==0.27
+requests==2.26.0
+resolvelib==0.5.5
+retrying==1.3.3
 six==1.16.0
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0rc0
-tensorflow-hub==0.12.0
-tensorflow-io-gcs-filesystem==0.23.1
-termcolor==1.1.0
-tf-estimator-nightly==2.8.0.dev2021122109
+team==1.0
 toml==0.10.2
 tomli==1.2.3
-typing_extensions==4.0.1
-urllib3==1.26.8
-virtualenv==20.13.0
+urllib3==1.26.7
+webencodings==0.5.1
 Werkzeug==2.0.2
-wrapt==1.13.3
+zipp==3.6.0
