--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ cycler==0.11.0
 distlib==0.3.4
 filelock==3.4.2
 Flask==2.0.2
+Flask-Cors==3.0.10
 Flask-RESTful==0.3.9
 flatbuffers==2.0
 fonttools==4.28.5
