--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2021.10.8
 cfgv==3.3.1
 charset-normalizer==2.0.10
 click==8.0.3
+colourmap==0.1.1
 cycler==0.11.0
 distlib==0.3.4
 filelock==3.4.2
@@ -17,6 +18,7 @@ Flask-RESTful==0.3.9
 flatbuffers==2.0
 fonttools==4.28.5
 gast==0.5.3
+gensim==4.1.2
 google-auth==2.3.3
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
@@ -26,6 +28,7 @@ identify==2.4.2
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
+joblib==1.1.0
 keras==2.8.0rc0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
@@ -41,6 +44,7 @@ opt-einsum==3.3.0
 packaging==21.3
 pandas==1.3.5
 pathspec==0.9.0
+pca==1.6.2
 Pillow==9.0.0
 platformdirs==2.4.1
 pre-commit==2.16.0
@@ -54,9 +58,12 @@ PyYAML==6.0
 requests==2.27.1
 requests-oauthlib==1.3.0
 rsa==4.8
+scikit-learn==1.0.2
 scipy==1.7.3
 seaborn==0.11.2
 six==1.16.0
+sklearn==0.0
+smart-open==5.2.1
 tensorboard==2.7.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -65,10 +72,13 @@ tensorflow-hub==0.12.0
 tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
 tf-estimator-nightly==2.8.0.dev2021122109
+threadpoolctl==3.1.0
 toml==0.10.2
 tomli==1.2.3
+tqdm==4.62.3
 typing_extensions==4.0.1
 urllib3==1.26.8
 virtualenv==20.13.0
 Werkzeug==2.0.2
+wget==3.2
 wrapt==1.13.3
