--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,65 @@
 absl-py==1.0.0
+alembic==1.7.4
 aniso8601==9.0.1
 annoy==1.17.0
+apparmor==3.0.3
+appdirs==1.4.4
+astroid==2.9.0
 astunparse==1.6.3
+Authlib==0.15.5
+Babel==2.9.1
+bcrypt==3.2.0
+Beaker==1.11.0
+bidict==0.21.4
 black==21.12b0
+blessings==1.7
+blinker==1.4
+bpython==0.22.1
+Brotli==1.0.9
+btrfsutil==5.16.1
+CacheControl==0.12.6
 cachetools==4.2.4
 certifi==2021.10.8
+cffi==1.15.0
 cfgv==3.3.1
+chardet==4.0.0
 charset-normalizer==2.0.10
 click==8.0.3
+colorama==0.4.4
 colourmap==0.1.1
+contextlib2==0.6.0.post1
+cryptography==3.4.8
+curtsies==0.3.5
+cwcwidth==0.1.4
 cycler==0.11.0
+decorator==5.1.1
 distlib==0.3.4
+distro==1.6.0
+dnspython==2.2.0
+docopt==0.6.2
+docutils==0.16
+email-validator==1.1.3
+eventlet==0.33.0
+extras==1.0.0
 filelock==3.4.2
+fixtures==3.0.0
+flake8==4.0.1
 Flask==2.0.2
+Flask-Babel==2.0.0
+Flask-BabelEx==0.9.4
+Flask-Compress==1.8.0
 Flask-Cors==3.0.10
+Flask-Gravatar==0.5.0
+Flask-Login==0.5.0
+Flask-Mail==0.9.1
+Flask-Migrate==3.0.0
+Flask-Paranoid==0.2.0
+Flask-Principal==0.4.0
 Flask-RESTful==0.3.9
+Flask-Security-Too==4.0.1
+Flask-SocketIO==5.1.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
 flatbuffers==2.0
 fonttools==4.28.5
 gast==0.5.3
@@ -22,48 +67,107 @@ gensim==4.1.2
 google-auth==2.3.3
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
+greenlet==1.1.2
 grpcio==1.43.0
+gssapi==1.6.14
 h5py==3.6.0
+html5lib==1.1
+httpagentparser==1.9.1
 identify==2.4.2
 idna==3.3
+importlib-metadata==4.8.1
+isc==2.0
+isort==5.10.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
 joblib==1.1.0
 keras==2.8.0rc0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
+lazy-object-proxy==1.7.1
+ldap3==2.9
+LibAppArmor==3.0.3
 libclang==12.0.0
+libfdt==1.6.1
+libtorrent===2.0.5-build-libtorrent-rasterbar-src-libtorrent-rasterbar-2.0.5-bindings-python
+libvirt-python==8.0.0
+Mako==1.1.6
 Markdown==3.3.6
 MarkupSafe==2.0.1
 matplotlib==3.5.1
+mccabe==0.6.1
+more-itertools==8.10.0
+msgpack==1.0.3
 mypy-extensions==0.4.3
+neovim==0.3.1
+nftables==0.1
 nodeenv==1.6.0
 numpy==1.22.0
 oauthlib==3.1.1
 opt-einsum==3.3.0
+optimus-manager==1.4
+ordered-set==4.0.2
 packaging==21.3
 pandas==1.3.5
+paramiko==2.9.2
+passlib==1.7.4
+path-and-address==2.0.1
 pathspec==0.9.0
+pbr==5.8.0
 pca==1.6.2
+pep517==0.12.0
 Pillow==9.0.0
 platformdirs==2.4.1
+ply==3.11
 pre-commit==2.16.0
+progress==1.6
 protobuf==3.19.1
+psutil==5.9.0
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycairo==1.20.1
+pycodestyle==2.8.0
+pycparser==2.21
+pyflakes==2.4.0
+Pygments==2.11.2
+PyGObject==3.42.0
+pylint==2.12.2
+PyNaCl==1.4.0
+pynvim==0.4.3
+pyOpenSSL==21.0.0
+pyotp==2.6.0
 pyparsing==3.0.6
 python-dateutil==2.8.2
+python-editor==1.0.4
+python-engineio==4.3.1
+python-socketio==5.5.1
 pytz==2021.3
+pyxdg==0.27
 PyYAML==6.0
+qrcode==7.3.1
+Reflector==2021.11.20.2.41.3
 requests==2.27.1
 requests-oauthlib==1.3.0
+resolvelib==0.5.5
+retrying==1.3.3
+rope==0.22.0
 rsa==4.8
 scikit-learn==1.0.2
 scipy==1.7.3
 seaborn==0.11.2
+simplejson==3.17.6
 six==1.16.0
 sklearn==0.0
 smart-open==5.2.1
+speaklater==1.3
+speaklater3==1.4
+SQLAlchemy==1.4.29
+sqlparse==0.4.2
+sshtunnel==0.4.0
+TBB==0.2
+team==1.0
 tensorboard==2.7.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
@@ -71,14 +175,20 @@ tensorflow==2.8.0rc0
 tensorflow-hub==0.12.0
 tensorflow-io-gcs-filesystem==0.23.1
 termcolor==1.1.0
+testtools==2.5.0
 tf-estimator-nightly==2.8.0.dev2021122109
 threadpoolctl==3.1.0
 toml==0.10.2
 tomli==1.2.3
 tqdm==4.62.3
-typing_extensions==4.0.1
+typing-extensions==4.0.1
+ua-parser==0.10.0
 urllib3==1.26.8
+user-agents==2.2.0
 virtualenv==20.13.0
+webencodings==0.5.1
 Werkzeug==2.0.2
 wget==3.2
 wrapt==1.13.3
+WTForms==3.0.1
+zipp==3.7.0
