--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ absl-py==1.0.0
 alembic==1.7.4
 aniso8601==9.0.1
 annoy==1.17.0
-apparmor==3.0.3
+apparmor==3.0.4
 appdirs==1.4.4
 astroid==2.9.0
 astunparse==1.6.3
@@ -86,7 +86,7 @@ Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
 lazy-object-proxy==1.7.1
 ldap3==2.9
-LibAppArmor==3.0.3
+LibAppArmor==3.0.4
 libclang==12.0.0
 libfdt==1.6.1
 libtorrent===2.0.5-build-libtorrent-rasterbar-src-libtorrent-rasterbar-2.0.5-bindings-python
@@ -113,7 +113,7 @@ paramiko==2.9.2
 passlib==1.7.4
 path-and-address==2.0.1
 pathspec==0.9.0
-pbr==5.8.0
+pbr==5.8.1
 pca==1.6.2
 pep517==0.12.0
 Pillow==9.0.0
@@ -181,7 +181,7 @@ threadpoolctl==3.1.0
 toml==0.10.2
 tomli==1.2.3
 tqdm==4.62.3
-typing-extensions==4.0.1
+typing_extensions==4.1.0
 ua-parser==0.10.0
 urllib3==1.26.8
 user-agents==2.2.0
