--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ blessings==1.7
 blinker==1.4
 bpython==0.22.1
 Brotli==1.0.9
-btrfsutil==5.16.1
+btrfsutil==5.16.2
 CacheControl==0.12.6
 cachetools==4.2.4
 certifi==2021.10.8
@@ -34,7 +34,7 @@ cwcwidth==0.1.4
 cycler==0.11.0
 decorator==5.1.1
 distlib==0.3.4
-distro==1.6.0
+distro==1.7.0
 dnspython==2.2.0
 docopt==0.6.2
 docutils==0.16
@@ -47,7 +47,7 @@ flake8==4.0.1
 Flask==2.0.2
 Flask-Babel==2.0.0
 Flask-BabelEx==0.9.4
-Flask-Compress==1.8.0
+Flask-Compress==0.0.0
 Flask-Cors==3.0.10
 Flask-Gravatar==0.5.0
 Flask-Login==0.5.0
@@ -62,6 +62,7 @@ Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 flatbuffers==2.0
 fonttools==4.28.5
+ftfy==6.1.1
 gast==0.5.3
 gensim==4.1.2
 google-auth==2.3.3
@@ -73,10 +74,10 @@ gssapi==1.6.14
 h5py==3.6.0
 html5lib==1.1
 httpagentparser==1.9.1
+huggingface-hub==0.4.0
 identify==2.4.2
 idna==3.3
 importlib-metadata==4.8.1
-isc==2.0
 isort==5.10.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
@@ -84,13 +85,14 @@ joblib==1.1.0
 keras==2.8.0rc0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
+langcodes==3.3.0
 lazy-object-proxy==1.7.1
 ldap3==2.9
 LibAppArmor==3.0.4
 libclang==12.0.0
 libfdt==1.6.1
 libtorrent===2.0.5-build-libtorrent-rasterbar-src-libtorrent-rasterbar-2.0.5-bindings-python
-libvirt-python==8.0.0
+libvirt-python==8.1.0
 Mako==1.1.6
 Markdown==3.3.6
 MarkupSafe==2.0.1
@@ -148,6 +150,7 @@ pyxdg==0.27
 PyYAML==6.0
 qrcode==7.3.1
 Reflector==2021.11.20.2.41.3
+regex==2022.3.2
 requests==2.27.1
 requests-oauthlib==1.3.0
 resolvelib==0.5.5
@@ -186,9 +189,12 @@ ua-parser==0.10.0
 urllib3==1.26.8
 user-agents==2.2.0
 virtualenv==20.13.0
+wcwidth==0.2.5
 webencodings==0.5.1
 Werkzeug==2.0.2
 wget==3.2
+wordfreq==2.5.1
 wrapt==1.13.3
 WTForms==3.0.1
+xlrd==2.0.1
 zipp==3.7.0
